# CodeMaestro

./: .buildpacks  .env.development  .gitignore  Cargo.toml  Dockerfile  LIST_OF_SUBCRATES  Procfile  README.md  TODO  app.json  builder.json  buildpack-run.sh  builtins.json  codesample  codesample.json  hwtheme.json  maybe-Dockerfile  output.output  themefromplane.json  wholestate.json
.cargo/: config
editor/: Cargo.toml
editor/src/: app.rs  chat.rs  chat_test_window.rs  code_context_menu_renderer.rs  code_editor.rs  code_editor_renderer.rs  code_generation.rs  code_rendering.rs  code_validation.rs  color_schemes.rs  edit_types.rs  editor.rs  filedialogs.js  imgui_support.rs  imgui_toolkit.rs  insert_code_menu.rs  json2.rs  json_http_client_builder.rs  main.rs  opener.rs  save_state.rs  schema_builder.rs  stdweb_executor.rs  theme_editor_renderer.rs  tokio_executor.rs  ui_toolkit.rs  undo.rs  window_positions.rs  yew_toolkit.rs
editor/src/code_editor/: clipboard.rs  generics.rs  locals.rs  type_inference.rs
editor/src/editor/: drag_drop.rs  value_renderer.rs
editor/src/json_http_client_builder/: fake_http_client.rs
editor/src/yew_toolkit/: all.rs  context_menu.rs  input.rs  overlay.rs  run_after_render.rs  separator.rs  spinner.rs  text.rs
fonts/generate/: .fontcustom-manifest.json  compile.sh
fonts/generate/fontcustom/: fontcustom-preview.html  fontcustom.css  fontcustom_4dd47aa7e06ba6b649cfc327ac85d20e.eot  fontcustom_65dc28a1b6db963be4ae06981885a2d4.eot
lang/: Cargo.toml
migrations/2019-03-18-073641_create_codes/: down.sql  up.sql
migrations/2019-04-11-031855_create_instance_configs/: down.sql  up.sql
pyjson-play/: output  play.py  results_dongbaek.json  results_seoul.json
scripts/: convert_icon_to_win_icon.py  deploy  gen-env.py  run-on-server-release
src/: asynk.rs  builtin_funcs.rs  builtins.rs  chat_program.rs  chat_trigger.rs  click_handling.rs  code_editor.rs  code_editor_renderer.rs  code_function.rs  code_generation.rs  code_loading.rs  code_validation.rs  config.rs  edit_types.rs  editor.rs  editor_views.rs  enums.rs  env.rs  env_genie.rs  external_func.rs  fakejsstuff.rs  fakepystuff.rs  function.rs  http_client.rs  http_request.rs  icons-regular-reference  icons-solid-reference  imgui_support.rs  imgui_toolkit.rs  insert_code_menu.rs  insert_code_menu_renderer.rs  json.rs  json2.rs  json_http_client.rs  json_http_client_builder.rs  jsstuff.rs  lang.rs  lib.rs  maestro_struct.py  main.rs  (+18 more)
src/builtins/: http_request.rs
static/: autoscroll.js  buttonize-hover.js  dragging.js  env.dev.js  filedialogs.js  focus.js  fonts.css  index.html  main.css  rightclick.js  scope.js
