#cargo-features = ["default-run"]

[package]
name = "cs"
version = "0.1.0"
authors = ["Sumeet Agarwal <sumeet.a@gmail.com>"]
edition = "2018"
#default-run = "cs"

[features]
default = ["glium", "glutin", "imgui", "imgui-sys", "imgui-glium-renderer", "imgui-winit-support", "pyo3", "slack",
           "tokio", "tokio-reactor", "tokio-timer", "tokio-executor", "irc", "irc-proto", "tokio-current-thread", "reqwest", "noob"]
javascript = ["yew", "stdweb"]

[dependencies]
objekt = "0.1.1"
debug-cell = "0.1.1"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
erased-serde = "0.3.6"
failure = "0.1.2"
uuid = { git = "https://github.com/uuid-rs/uuid", tag = "0.7.1", features = ["serde", "v4", "v5"] }
lazy_static = "1.1.0"
itertools = "0.7.8"
downcast-rs = "1.0.3"
futures = "0.1"
take_mut = "0.2.2"
http = "0.1"
# need this for the old / new futures compat layer in wasm as well as native
tokio-async-await = {version = "0.1.4", features = ["async-await-preview"]}
cfg-if = "0.1"
matches = "0.1.8"
url = "1.7.2"
maplit = "1.0.1"
gen-iter = {git = "https://github.com/sumeet/gen-iter"}

pyo3 = { version = "0.5.2", optional = true }
glium = { version = "0.23", default-features = true, optional = true }
glutin = { version = "0.19", optional = true }
imgui = { git = "https://github.com/Gekkio/imgui-rs", branch = "master", optional = true }
imgui-sys = { git = "https://github.com/Gekkio/imgui-rs", branch = "master", optional = true }
imgui-glium-renderer = { git = "https://github.com/Gekkio/imgui-rs", branch = "master", optional = true }
imgui-winit-support = { git = "https://github.com/Gekkio/imgui-rs", branch = "master", optional = true }
tokio = {version = "0.1.13", features = ["async-await-preview"], optional = true }
tokio-reactor = {version = "0.1.7", optional = true }
tokio-current-thread = {version = "0.1.4", optional = true }
tokio-timer = {version = "*", optional = true}
tokio-executor = {version = "*", optional = true}
irc = {git = "https://github.com/aatxe/irc", branch = "0.14", optional = true }
irc-proto = {git = "https://github.com/aatxe/irc", branch = "0.14", optional = true }
stdweb = {git = "https://github.com/koute/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps", "futures-support"], optional = true }
reqwest = {version = "0.9.6", optional = true, features=["hyper-011"] }
yew = { git = "https://github.com/DenisKolodin/yew", optional = true }
slack = { git = "https://github.com/sumeet/slack-rs", features = ["future"], branch = "master", optional = true }
noob = {version = "1.1.0", optional = true}
regex = {version = "1.1.0"}

# wow i can't believe i need this
futures-util-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master", features = ["compat"] }

[patch.crates-io]
futures-core-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master" }
#futures-sink-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master" }
futures-util-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master", features = ["compat"] }
stdweb = {git = "https://github.com/koute/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps", "futures-support"]}
