#cargo-features = ["default-run"]

[package]
name = "cs"
version = "0.1.0"
authors = ["Sumeet Agarwal <sumeet.a@gmail.com>"]
edition = "2018"
#default-run = "cs"

[workspace]
members = [
  "editor"
]

[features]
python = ["pyo3"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = {version = "*"}
slack = { git = "https://github.com/sumeet/slack-rs", features = ["future"], branch = "master" }
tokio = {version = "0.1.21"}
tokio-timer = "0.2.11"
irc = {git = "https://github.com/aatxe/irc", branch = "0.14" }
irc-proto = {git = "https://github.com/aatxe/irc", branch = "0.14" }
reqwest = {git = "https://github.com/sumeet/reqwest", branch = "master" }
noob = {git = "https://github.com/sumeet/noob", branch = "master"}
gotham = {git = "https://github.com/sumeet/gotham" }
http-fs = {git = "https://gitlab.com/sumeet4/http-fs", features = ["hyper"]}
futures-cpupool = {version = "0.1.8"}
diesel = {version = "1.4.1", features = ["postgres", "extras"]}
r2d2 = {version = "*"}
dotenv = {version = "0.13.0"}
branca = {version = "0.8.0"}
futures-channel = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master", features=["sink"]}
sentry = {git = "https://github.com/getsentry/sentry-rust", default-features = false, features=["backtrace", "panic", "curl"] }
sentry-panic = {git = "https://github.com/getsentry/sentry-rust"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/koute/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps", "futures-support"] }

[dependencies]
objekt = "0.1.1"
#debug-cell = "0.1.1"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.31"
typetag = "0.1.1"
failure = "0.1.2"
uuid = { git = "https://github.com/uuid-rs/uuid", tag = "0.8.1", features = ["serde", "v4", "v5", "stdweb"] }
lazy_static = "1.1.0"
itertools = "*"
downcast-rs = "1.0.3"
futures = "0.1"
take_mut = "0.2.2"
http = "0.1"
cfg-if = "0.1"
url = "1.7.2"
maplit = "1.0.1"
pyo3 = { version = "0.5.2", optional = true }
regex = {version = "1.1.0"}
array-init = {git = "https://github.com/sumeet/array-init", branch = "const-generics"}
gen-iter = {git = "https://github.com/sumeet/gen-iter"}

# wow i can't believe i need this
futures-util = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master", features = ["compat", "sink"] }

[patch.crates-io]
#async-std = {git = "https://github.com/async-rs/async-std", tag = "v1.6.1"}
mime_guess = {git = "https://github.com/abonander/mime_guess", rev = "41e2dee59979d48c2900ed3b900c6a4efbce36d2"}
futures-core = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master" }
#futures-sink = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master" }
futures-util = { git = "https://github.com/rust-lang-nursery/futures-rs", branch = "master", features = ["compat"] }
reqwest = {git = "https://github.com/sumeet/reqwest", branch = "master"}
stdweb = {git = "https://github.com/koute/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps", "futures-support"]}

