[package]
name = "editor"
version = "0.1.0"
authors = ["Sumeet Agarwal <sumeet.a@gmail.com>"]
edition = "2018"

[dependencies]
cs = {path = "../"}

# these are specified in super
cfg-if = "*"
itertools = "*"
serde = "*"
serde_derive = "*"
lazy_static = "*"
serde_json = "*"
objekt = "*"
http = "*"

gen-iter = {git = "https://github.com/sumeet/gen-iter"}
matches = "0.1.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glium = { version = "0.23", default-features = true }
glutin = { version = "0.19" }
imgui = "0.0.23"
imgui-sys = "0.0.23"
imgui-glium-renderer = "0.0.23"
imgui-winit-support = "0.0.23"
tokio-current-thread = {version = "0.1.4" }
tokio-reactor = {version = "0.1.7" }
tokio-timer = {version = "0.2.10" }
directories = {version = "1.0.2" }
tokio-executor = {version = "*" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/koute/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps", "futures-support"] }
yew = { git = "https://github.com/DenisKolodin/yew" }
