[package]
name = "editor"
version = "0.1.0"
authors = ["Sumeet Agarwal <sumeet.a@gmail.com>"]
edition = "2018"

[dependencies]
cs = {path = "../"}

# these are specified in super
cfg-if = "*"
itertools = "*"
serde = "*"
serde_derive = "*"
lazy_static = "*"
serde_json = "*"
objekt = "*"
http = "*"

gen-iter = {git = "https://github.com/sumeet/gen-iter"}
matches = "0.1.8"
rand = {version = "0.7.0", features = ["stdweb"]}
# gotta copy and paste this from super for some reason
uuid = { git = "https://github.com/uuid-rs/uuid", tag = "0.7.1", features = ["serde", "v4", "v5"] }
# might get rid of this after i try it
backtrace = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glium = { version = "0.24", default-features = true }
# matching the dep of the glium from above
glutin = { version = "0.20.1" }
imgui = {git = "https://github.com/sumeet/imgui-rs", branch="glium0.24" }
imgui-sys = {git = "https://github.com/sumeet/imgui-rs", branch="glium0.24" }
imgui-glium-renderer = {git = "https://github.com/sumeet/imgui-rs", branch="glium0.24" }
imgui-winit-support = {git = "https://github.com/sumeet/imgui-rs", branch="glium0.24" }
tokio-current-thread = {version = "0.1.4" }
tokio-reactor = {version = "0.1.7" }
tokio-timer = {version = "0.2.10" }
directories = {version = "1.0.2" }
tokio-executor = {version = "*" }
nfd = {git = "https://github.com/saurvs/nfd-rs", branch = "master"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/koute/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps", "futures-support"] }
yew = { git = "https://github.com/yewstack/yew" }
