[package]
name = "editor"
version = "0.1.0"
authors = ["Sumeet Agarwal <sumeet.a@gmail.com>"]
edition = "2018"

[dependencies]
cs = {path = "../"}

# these are specified in super
cfg-if = "*"
itertools = "*"
serde = {version = "*", features=["derive"]}
serde_derive = "*"
lazy_static = "*"
serde_json = "*"
objekt = "*"
http = "0.1.19"
gen-iter = {git = "https://github.com/sumeet/gen-iter"}
bincode = "1.3.1"
matches = "0.1.8"
rand = {version = "0.7.3", features = ["stdweb"]}
# gotta copy and paste this from super for some reason
uuid = { git = "https://github.com/uuid-rs/uuid", tag = "0.8.1", features = ["serde", "v4", "v5", "stdweb"] }
# might get rid of this after i try it
backtrace = "0.3.44"
indexmap = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glium = { version = "0.27.0", default-features = true }
# matching the dep of the glium from above imgui
glutin = { version = "0.24.1" }
winit = "0.22.2"
imgui = {git = "https://github.com/Gekkio/imgui-rs", tag="v0.4.0" }
imgui-sys = {git = "https://github.com/Gekkio/imgui-rs", tag="v0.4.0" }
imgui-glium-renderer = {git = "https://github.com/Gekkio/imgui-rs", tag="v0.4.0" }
imgui-winit-support = {git = "https://github.com/Gekkio/imgui-rs", tag="v0.4.0" }
tokio-current-thread = {version = "0.1.4" }
tokio-reactor = {version = "0.1.7" }
tokio-timer = {version = "0.2.10" }
directories = {version = "1.0.2" }
tokio-executor = {version = "*" }
nfd = {git = "https://github.com/saurvs/nfd-rs", branch = "master"}
clipboard = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = { git = "https://github.com/koute/stdweb", features = ["experimental_features_which_may_break_on_minor_version_bumps", "futures-support"] }
yew = { git = "https://github.com/yewstack/yew", package="yew-stdweb" }
# TODO: add this back in later once yewtil is supported
#yewtil = { git = "https://github.com/yewstack/yew" }
